...
    @Published var recipes: [Recipe] = []
    
    func loadRecipes(query : String, completion: @escaping () -> Void) {
        
        let request = EdamamAPIRequest(query: query)
        guard let url = request.url else {
            return
        }
        let urlSession = URLSession(configuration: .ephemeral)
        let task = urlSession.dataTask(with: url) { (data, response, error) in
            if let error = error {
                print("Error: \(error.localizedDescription)")
                return
...

    var userFriendlyName: String {
        switch self {
        case .addedtime:
            return "Added Time"
        case .cookingtime:
            return "Cooking Time"
        default:
            return self.rawValue.capitalized
        }
    }
}

...
