...
                            .foregroundColor(.searchLabelColor)
                            .padding(.horizontal, 16)
                            .padding(.top, 25)
                            .padding(.bottom, 10)
                        
                        HStack(spacing: 18) {
                            Image(systemName: "magnifyingglass")
                                .accessibilityIdentifier("magnifyingglass")
                                .frame(width: 15, height: 15)
                                .foregroundColor(.black)
                            TextField(
                                "",
                                text: $searchString,
...
                                isActive: $isNavigationLinkActive,
                                label: { EmptyView() })
                            Button(action: {
                                searchString = ""
                                isInputActive = false
                            }) {
                                Image(systemName: "xmark.circle.fill")
                                    .foregroundColor(.gray)
                                    .font(.system(size: 15))
                            }
                        }
                        .padding(.vertical, 8)
                        .padding(.horizontal, 18)
...
